welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:1: error: ';' expected but ')' found.
  pasDeSerpent-)
               ^